<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_item_home"
            android:icon="@drawable/iconfont_home"
            android:title="@string/navigation_item_home" />
        <item
            android:id="@+id/navigation_item_report"
            android:checked="true"
            android:icon="@drawable/iconfont_source"
            android:title="@string/navigation_item_report" />
        <item
            android:id="@+id/navigation_item_datail"
            android:icon="@drawable/iconfont_blog"
            android:title="@string/navigation_item_datail" />
        <item
            android:id="@+id/navigation_item_set"
            android:icon="@drawable/iconfont_custom_view"
            android:title="@string/navigation_item_set" />
        <item
            android:id="@+id/navigation_item_snackbar"
            android:icon="@drawable/iconfont_custom_view"
            android:title="Snackbar演示" />

        <item android:title="@string/navigation_item_other">
            <menu>
                <item
                    android:id="@+id/navigation_item_switch_theme"
                    android:checkable="true"
                    android:icon="@drawable/iconfont_skin"
                    android:title="@string/navigation_item_skin" />
                <item
                    android:id="@+id/navigation_item_switch_font"
                    android:checkable="true"
                    android:icon="@drawable/iconfont_skin"
                    android:title="@string/navigation_item_font" />

                <item
                    android:id="@+id/navigation_item_about"
                    android:checkable="true"
                    android:icon="@drawable/iconfont_about"
                    android:title="@string/navigation_item_about" />
            </menu>
        </item>
    </group>

</menu>